Fix widths of stories on mobile.

--- a/css/src/component/_stories.scss
+++ b/css/src/component/_stories.scss
@@ -31,6 +31,7 @@
             height: 40px;
             background: url(../img/icon-arrow-black-left.png) center center no-repeat;
             background-size: contain;
+            display: inline-block;
 
             @include respond-to( $bp-m ) {
                 position: absolute;
@@ -48,6 +49,7 @@
             height: 40px;
             background: url(../img/icon-arrow-black-right.png) center center no-repeat;
             background-size: contain;
+            display: inline-block;
 
             @include respond-to( $bp-m ) {
                 position: absolute;
@@ -70,11 +72,19 @@
         transition: 100ms margin-left ease-in-out;
 
         .story {
-            flex: 0 0 90%;
+            flex: 0 0 300px;
             max-width: 400px;
             margin-right: 30px;
             border-radius: 6px;
             overflow: hidden;
+
+            @include respond-to( $bp-m ) {
+                flex-basis: 375px;
+            }
+
+            @include respond-to( $bp-xl ) {
+                flex-basis: 500px;
+            }
 
             img {
                 display: block;
